--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "crypto": "^1.0.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "socket.io": "^4.8.1"
   }
 }
